# app/v1/controller/products_service/products_service.py
@@ -30,11 +30,8 @@ class ProductsService(BaseService):
     #=================UPDATE  & DELETE FUNCTIONS=====================
     def update_product(self, ID: str, data: PutSchemaProductIn) -> PutSchemaProductOut:
         self.logger.info(f"Updating product with ID {ID}")
-        updated_at = datetime.now()
-
-        # # Convert the input data to a dictionary and add updated_at
-        # update_data = data.model_dump(exclude_none=True)
-        # update_data["updated_at"] = updated_at
+        updated_at = datetime.now().isoformat()
+        data.updated_at = updated_at
 
         self.products_dao.update_product(ID, data)
         self.logger.info(f"Product with ID {ID} updated")
